--- a/package.json
+++ b/package.json
@@ -13,7 +13,7 @@
     "@appveen/data.stack-utils": "^1.0.21",
     "@appveen/data-mapper": "^1.1.0",
     "@appveen/ds-sdk": "^2.3.2",
-    "@appveen/utils": "2.1.9",
+    "@appveen/utils": "https://github.com/appveen/utils.git",
     "async": "^3.2.3",
     "express": "^4.18.1",
     "express-fileupload": "^1.4.0",
